<resources>
    <string name="app_name">Currency3</string>
    <string name="problem">Problem</string>
    <string name="ProblemDescription">Please enter your NTD amount.</string>
    <string name="result">Result</string>
    <string name="usd_is">"USD is "</string>
    <string name="ok">OK</string>
    <string name="ntd">NTD</string>
    <string name="go">GO</string>
    <string name="jp">JP</string>
    <string name="none">None</string>
    <string name="us">US</string>
    <string name="jpd_is">JPD is</string>
</resources>
